[package]
name = "rvb"
description = "(r)ust (v)8 (b)ridge"
keywords = ["v8"]
readme = "README.md"
repository = "https://github.com/uuhan/v8-rust"
homepage = "https://github.com/uuhan/v8-rust"
license = "MIT"
version = "1.0.0-alpha"
authors = ["uuhan <xuminhui189@gmail.com>"]
edition = "2018"

[build-dependencies]
pkg-config = "0.3.14"
bindgen = "0.48.1"
cc = "1.0.30"

[dependencies]
libc = "0.2.50"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "benchmark"
harness = false
