[package]
name = "rvb"
description = "(r)ust (v)8 (b)ridge"
keywords = ["v8"]
readme = "README.md"
repository = "https://github.com/uuhan/v8-rust"
homepage = "https://github.com/uuhan/v8-rust"
license = "MIT"
version = "1.0.0-alpha.2"
authors = ["uuhan <xuminhui189@gmail.com>"]
edition = "2018"

[features]

default = ["7_8_0"]

7_4_0 = []
7_5_0 = []
7_6_0 = []
7_8_0 = []

[build-dependencies]
pkg-config = "0.3.14"
bindgen = "0.48.1"
cc = "1.0.30"

[dependencies]
libc = "0.2.50"
cfg-if = "0.1.10"

[dev-dependencies]
criterion = "0.2.11"
cfg-if = "0.1.10"

[[bench]]
name = "benchmark"
harness = false
