[package]
name = "rvb"
description = "(r)ust (v)8 (b)ridge"
keywords = ["v8"]
readme = "README.md"
repository = "https://github.com/uuhan/v8-rust"
homepage = "https://github.com/uuhan/v8-rust"
license = "MIT"
version = "1.0.0-alpha.3"
authors = ["uuhan <xuminhui189@gmail.com>"]
edition = "2018"

[features]

default = ["7_8_0"]

7_4_0 = []
7_5_0 = []
7_6_0 = []
7_8_0 = []

[build-dependencies]
pkg-config = "^0.3.14"
bindgen = "^0.52.0"
cc = "~1"

[dependencies]
libc = "~0.2"
cfg-if = "*"

[dev-dependencies]
criterion = "^0.2.11"
cfg-if = "*"

[[bench]]
name = "benchmark"
harness = false
